--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/node": "^6.0.1",
-    "@astrojs/react": "^3.0.2",
+    "@astrojs/react": "^3.6.3",
+    "@astrojs/vercel": "^8.1.4",
     "@cloudinary/react": "^1.11.2",
     "@cloudinary/url-gen": "^1.11.2",
     "@googlemaps/react-wrapper": "^1.1.35",
     "@types/react": "^18.2.24",
     "@types/react-dom": "^18.2.8",
-    "astro": "^3.1.4",
+    "astro": "^5.7.8",
     "axios": "^1.5.1",
     "bootstrap-icons": "^1.11.1",
     "cloudinary-core": "^2.13.0",
@@ -27,8 +27,8 @@
     "leaflet": "^1.9.4",
     "mongodb": "^6.1.0",
     "parse": "^4.2.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.20.1"
   }
